# watermark_removal

./: .editorconfig  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/editor/: ImageStage.tsx  Toolbar.tsx
apps/desktop/src/components/result/: ResultViewer.tsx
apps/desktop/src/lib/api/: inpaintClient.ts
apps/desktop/src/lib/mask/: exportMask.ts
apps/desktop/src/lib/tauri/: fileBridge.ts
apps/desktop/src/pages/: EditorPage.tsx
apps/desktop/src/store/: appStore.ts
apps/desktop/src/test/: editor.spec.tsx  exportMask.spec.ts  inpaintClient.spec.ts  setup.ts  store.spec.ts
apps/desktop/src/types/: api.ts  editor.ts
docs/superpowers/plans/: 2026-04-13-watermark-removal-implementation.md
docs/superpowers/specs/: 2026-04-13-watermark-removal-desktop-design.md
services/inpaint-api/: Dockerfile  README.md  pyproject.toml
services/inpaint-api/app/: main.py
services/inpaint-api/app/api/v1/: inpaint.py
services/inpaint-api/app/core/: config.py
services/inpaint-api/app/schemas/: response.py
services/inpaint-api/app/services/: inpaint_engine.py  preprocess.py  response_builder.py  validator.py
services/inpaint-api/tests/: test_inpaint_api.py  test_validator.py
