[package]
name = "watermark-removal-desktop"
version = "0.1.0"
description = "Desktop shell for watermark removal"
authors = ["shulong"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-http = "2.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "watermark_removal_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
